objects/CW_Invoice__x.object
<CustomObject>
    <description>CW Invoice</description>
    <externalDataSource>CWConnection</externalDataSource>
    <externalName>CW Invoice</externalName>
    <fields>
        <fullName>Additional_Charge_Amount_IST__c</fullName>
        <description>Additional Charge Amount (IST)</description>
        <externalDeveloperName>Additional Charge Amount (IST)</externalDeveloperName>
        <label>Additional Charge Amount (IST)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Additional_Freight_Amount_IST__c</fullName>
        <description>Additional Freight Amount (IST)</description>
        <externalDeveloperName>Additional Freight Amount (IST)</externalDeveloperName>
        <label>Additional Freight Amount (IST)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BOM_Component_Sequence__c</fullName>
        <description>BOM Component Sequence</description>
        <externalDeveloperName>BOM Component Sequence</externalDeveloperName>
        <label>BOM Component Sequence</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOM_Header_Flag__c</fullName>
        <description>BOM Header Flag</description>
        <externalDeveloperName>BOM Header Flag</externalDeveloperName>
        <label>BOM Header Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Color_Code__c</fullName>
        <description>Color Code</description>
        <externalDeveloperName>Color Code</externalDeveloperName>
        <label>Color Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <description>Company</description>
        <externalDeveloperName>Company</externalDeveloperName>
        <label>Company</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Number__c</fullName>
        <description>Credit Card Number</description>
        <externalDeveloperName>Credit Card Number</externalDeveloperName>
        <label>Credit Card Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Shipped__c</fullName>
        <description>Date Shipped</description>
        <externalDeveloperName>Date Shipped</externalDeveloperName>
        <label>Date Shipped</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Freight_Amount_IL__c</fullName>
        <description>Freight Amount (IL)</description>
        <externalDeveloperName>Freight Amount (IL)</externalDeveloperName>
        <label>Freight Amount (IL)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Freight_Amount_IST__c</fullName>
        <description>Freight Amount (IST)</description>
        <externalDeveloperName>Freight Amount (IST)</externalDeveloperName>
        <label>Freight Amount (IST)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GST_Amount_IL__c</fullName>
        <description>GST Amount (IL)</description>
        <externalDeveloperName>GST Amount (IL)</externalDeveloperName>
        <label>GST Amount (IL)</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GST_Amount_IST__c</fullName>
        <description>GST Amount (IST)</description>
        <externalDeveloperName>GST Amount (IST)</externalDeveloperName>
        <label>GST Amount (IST)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Handling_Amount_IL__c</fullName>
        <description>Handling Amount (IL)</description>
        <externalDeveloperName>Handling Amount (IL)</externalDeveloperName>
        <label>Handling Amount (IL)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Handling_Amount_IST__c</fullName>
        <description>Handling Amount (IST)</description>
        <externalDeveloperName>Handling Amount (IST)</externalDeveloperName>
        <label>Handling Amount (IST)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <description>Invoice Date</description>
        <externalDeveloperName>Invoice Date</externalDeveloperName>
        <label>Invoice Date</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Line_Number__c</fullName>
        <description>Invoice Line Number</description>
        <externalDeveloperName>Invoice Line Number</externalDeveloperName>
        <label>Invoice Line Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <description>Invoice Number</description>
        <externalDeveloperName>Invoice Number</externalDeveloperName>
        <label>Invoice Number</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice_Order_Line_Sequence_Number__c</fullName>
        <description>Invoice Order Line Sequence Number</description>
        <externalDeveloperName>Invoice Order Line Sequence Number</externalDeveloperName>
        <label>Invoice Order Line Sequence Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice_Type__c</fullName>
        <description>Invoice Type</description>
        <externalDeveloperName>Invoice Type</externalDeveloperName>
        <label>Invoice Type</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Number__c</fullName>
        <description>Item Number</description>
        <externalDeveloperName>Item Number</externalDeveloperName>
        <label>Item Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merchandise_Amount_IST__c</fullName>
        <description>Merchandise Amount (IST)</description>
        <externalDeveloperName>Merchandise Amount (IST)</externalDeveloperName>
        <label>Merchandise Amount (IST)</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Merchandise_Unit_Price_IL__c</fullName>
        <description>Merchandise Unit Price (IL)</description>
        <externalDeveloperName>Merchandise Unit Price (IL)</externalDeveloperName>
        <label>Merchandise Unit Price (IL)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Level_Freight_Tax__c</fullName>
        <description>Order Level Freight Tax</description>
        <externalDeveloperName>Order Level Freight Tax</externalDeveloperName>
        <label>Order Level Freight Tax</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <description>Order Number</description>
        <externalDeveloperName>Order Number</externalDeveloperName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Payment_Sequence_Number__c</fullName>
        <description>Order Payment Sequence Number</description>
        <externalDeveloperName>Order Payment Sequence Number</externalDeveloperName>
        <label>Order Payment Sequence Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PST_Amount_IL__c</fullName>
        <description>PST Amount (IL)</description>
        <externalDeveloperName>PST Amount (IL)</externalDeveloperName>
        <label>PST Amount (IL)</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PST_Amount_IST__c</fullName>
        <description>PST Amount (IST)</description>
        <externalDeveloperName>PST Amount (IST)</externalDeveloperName>
        <label>PST Amount (IST)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Additional_Charge_Amount__c</fullName>
        <description>Payment Additional Charge Amount</description>
        <externalDeveloperName>Payment Additional Charge Amount</externalDeveloperName>
        <label>Payment Additional Charge Amount</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Additional_Freight_Amount__c</fullName>
        <description>Payment Additional Freight Amount</description>
        <externalDeveloperName>Payment Additional Freight Amount</externalDeveloperName>
        <label>Payment Additional Freight Amount</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Category_Description__c</fullName>
        <description>Payment Category Description</description>
        <externalDeveloperName>Payment Category Description</externalDeveloperName>
        <label>Payment Category Description</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Category__c</fullName>
        <description>Payment Category</description>
        <externalDeveloperName>Payment Category</externalDeveloperName>
        <label>Payment Category</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Freight_Amount__c</fullName>
        <description>Payment Freight Amount</description>
        <externalDeveloperName>Payment Freight Amount</externalDeveloperName>
        <label>Payment Freight Amount</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_GST_Amount__c</fullName>
        <description>Payment GST Amount</description>
        <externalDeveloperName>Payment GST Amount</externalDeveloperName>
        <label>Payment GST Amount</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Handling_Amount__c</fullName>
        <description>Payment Handling Amount</description>
        <externalDeveloperName>Payment Handling Amount</externalDeveloperName>
        <label>Payment Handling Amount</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Merchandise_Amount__c</fullName>
        <description>Payment Merchandise Amount</description>
        <externalDeveloperName>Payment Merchandise Amount</externalDeveloperName>
        <label>Payment Merchandise Amount</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_PST_Amount__c</fullName>
        <description>Payment PST Amount</description>
        <externalDeveloperName>Payment PST Amount</externalDeveloperName>
        <label>Payment PST Amount</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Tax_Amount__c</fullName>
        <description>Payment Tax Amount</description>
        <externalDeveloperName>Payment Tax Amount</externalDeveloperName>
        <label>Payment Tax Amount</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Type_Description__c</fullName>
        <description>Payment Type Description</description>
        <externalDeveloperName>Payment Type Description</externalDeveloperName>
        <label>Payment Type Description</label>
        <length>28</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <description>Payment Type</description>
        <externalDeveloperName>Payment Type</externalDeveloperName>
        <label>Payment Type</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pre_Bill_Color_Code__c</fullName>
        <description>Pre Bill Color Code</description>
        <externalDeveloperName>Pre Bill Color Code</externalDeveloperName>
        <label>Pre Bill Color Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Bill_Item_Number__c</fullName>
        <description>Pre Bill Item Number</description>
        <externalDeveloperName>Pre Bill Item Number</externalDeveloperName>
        <label>Pre Bill Item Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Bill_Size_Code__c</fullName>
        <description>Pre Bill Size Code</description>
        <externalDeveloperName>Pre Bill Size Code</externalDeveloperName>
        <label>Pre Bill Size Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity_Shipped__c</fullName>
        <description>Quantity Shipped</description>
        <externalDeveloperName>Quantity Shipped</externalDeveloperName>
        <label>Quantity Shipped</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ship_To_Number_IST__c</fullName>
        <description>Ship To Number (IST)</description>
        <externalDeveloperName>Ship To Number (IST)</externalDeveloperName>
        <label>Ship To Number (IST)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Size_Code__c</fullName>
        <description>Size Code</description>
        <externalDeveloperName>Size Code</externalDeveloperName>
        <label>Size Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Amount_IL__c</fullName>
        <description>Tax Amount (IL)</description>
        <externalDeveloperName>Tax Amount (IL)</externalDeveloperName>
        <label>Tax Amount (IL)</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Amount_IST__c</fullName>
        <description>Tax Amount (IST)</description>
        <externalDeveloperName>Tax Amount (IST)</externalDeveloperName>
        <label>Tax Amount (IST)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>CW Invoice</label>
    <pluralLabel>CW Invoice</pluralLabel>
</CustomObject>